<resources>
    <string name="app_name">Seahawk Tours</string>
    <string name="title">Welcome to UNCW!</string>
    <string name="buildingImage">UNCW Building</string>
    <string name="instructions">Pick a UNCW building to learn more about it</string>
    <string-array name="buildings">
        <item>Computer Information Systems (CIS)</item>
        <item>Randall Library (RL)</item>
        <item>DeLoach Hall (DL)</item>
        <item>Bear Hall (BR)</item>
        <item>Wagoner Hall (WA)</item>
    </string-array>
    <string name="cis">Computer Information Systems (CIS)</string>
    <string name="rl">Randall Library (RL)</string>
    <string name="dl">DeLoach Hall (DL)</string>
    <string name="br">Bear Hall (BR)</string>
    <string name="wa">Wagoner Hall (WA)</string>
    <string name="buildingDetails">Get Details</string>
    <string name="cis_desc">The Computer Information Systems (CIS) building was constructed to house the Information Systems and Operations Management Department from the Cameron School of Business and the Department of Computer Science from the College of Arts and Sciences. The CIS Building, a new 51,731 square-foot state-of-the-art facility on the UNCW campus, opened January 10, 2007 for the new school semester. Work on the facility began on July 29, 2004 with the groundbreaking, and competed in December of 2006. The building cost approximately $12.8 million and was funded by the North Carolina State Bond campaign of 2000.</string>
    <string name="rl_desc">Funding to construct a library at the new campus location began in 1965 by the Friends of Wilmington College. The first on-site library was housed in Alderman Hall administration building following the move from Isaac Bear Building. In 1968, the original front of Randall Library faced College Road but since its 1980s expansion the entrance now faces Chancellors Walk. This facility contains UNCW Archives, Special Collections (Helen Hagan Room), the Gene Huguelet Conference Room, and the Honors Program offices, along with various faculty offices.</string>
    <string name="dl_desc">Originally called the Physics-Chemistry Building, this structure housed classrooms for those departments. Groundbreaking took place in July of 1967, occupation began in 1968, with the official renaming ceremony to DeLoach Hall in October of 1985. Currently the building holds offices and classrooms for the Department of Physics, Department of Physical Oceanography and the Department of Earth Sciences. The Department of Chemistry was housed here until Dobo Hall opened. DeLoach Hall contains a large teaching auditorium and several laboratories.</string>
    <string name="br_desc">Bear Hall opened at its present site in 1972 as the home for the Business and Economics Departments. Currently, the Departments of Computer Science, Mathematics and Statistics, and Philosophy and Religion occupy classrooms, teaching labs and faculty offices. The College of Arts and Science also resides here.</string>
    <string name="wa_desc">This structure opened to students in 1989 as the second campus dining hall (Westside was the first.) The Wagoner Dining Hall features food service with special events catering in the Madeline Suite. The General College was housed in Wagoner until its move to Westside following Westsides renovation.</string>
    <string name="cisCaption">Computer Information Systems Building Entrance</string>
    <string name="rlCaption">Entrance to Randall Library from Chancellors Walk</string>
    <string name="dlCaption">The entrance to DeLoach Hall and the interior garden</string>
    <string name="brCaption">The main entrance to Bear Hall</string>
    <string name="waCaption">The entrance to Wagoner Hall from Chancellors Walk</string>
    <string name="back">Back</string>

    <string name="linkText">For more information visit: </string>
    <string name="cisURL">https://library.uncw.edu/web/collections/archives/bnl/cis.html</string>
    <string name="rlURL">https://library.uncw.edu/web/collections/archives/bnl/3.html</string>
    <string name="dlURL">https://library.uncw.edu/web/collections/archives/bnl/2.html</string>
    <string name="brURL">https://library.uncw.edu/web/collections/archives/bnl/19.html</string>
    <string name="waURL">https://library.uncw.edu/web/collections/archives/bnl/39.html</string>

    <string name="about">Created by Audrey Bunn. UNCW building information and images courtesy of the UNCW University Archives. </string>
    <string name="uncwArchiveURL">https://library.uncw.edu/web/collections/archives/landmarks.html</string>

    <string name="aboutMenu">About</string>

    <string name="up">up</string>
    <string name="menu">menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>

    <string name="map_title">Tap the circular teal button to see nearby buildings.</string>

</resources>
