<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    >


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="#101F61"
        android:textSize="50sp"
        android:textStyle="bold"
        />

<!--    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:src="@drawable/front_page" />-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/instructions"
        android:textColor="#101F61"
        android:textSize="19sp"
        android:textStyle="bold"
        android:paddingBottom="220dp"
        />

    <Spinner
        android:id="@+id/buildings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:popupBackground="#FFF579"
        android:textSize="28sp"
        android:background="#FFF579"
        android:layout_marginTop="37dp"
        android:entries="@array/buildings"
        android:paddingBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBuildingDetails"
        android:text="@string/buildingDetails"
        android:textSize="15sp" />


</LinearLayout>