<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/cis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="30dp"
            android:text="@string/rl"
            android:textColor="#2c9175"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:gravity="top"
            android:src="@drawable/randall"
            android:contentDescription="@string/rlCaption"/>

        <TextView
            android:id="@+id/rlCaption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/rlCaption"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rlDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="40dp"
            android:text="@string/building2_desc"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickBack"
            android:text="@string/back" />

    </LinearLayout>

</ScrollView>