<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar">
        </include>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about"
            android:text="@string/about"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/archivesURL"
            android:autoLink="web"
            android:text="@string/uncwArchiveURL"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:paddingBottom="0dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/about"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"/>

        <ImageView
            android:contentDescription="@string/buildingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="0dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/seahawks_logo_png"
            app:layout_constraintTop_toBottomOf="@id/archivesURL"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>